# ChangeLog for sys-libs/uclibc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.46 2009/07/20 04:59:47 vapier Exp $

  20 Jul 2009; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.30.1.ebuild,
  uclibc-0.9.30.1-r1.ebuild:
  Fix getline() conflict with glibc-2.10 #277186 by Diego E. Pettenò.

*uclibc-0.9.30.1-r1 (12 Mar 2009)

  12 Mar 2009; <solar@gentoo.org> +uclibc-0.9.30.1-r1.ebuild:
  - import a few svn patches from upstream. fixes bug 262181

*uclibc-0.9.30.1 (03 Mar 2009)

  03 Mar 2009; <solar@gentoo.org> +uclibc-0.9.30.1.ebuild:
  - version bump

  10 Jan 2009; Stuart Longland <redhatter@gentoo.org> uclibc-0.9.30.ebuild:
  Added ~mips keyword. uClibc appears to work fine on both mips and mipsel
  with one caveat: it doesn't work on 16KB page size kernels (i.e. Loongson)
  see http://bugs.busybox.net/show_bug.cgi?id=9 for info here.

  It *does* however, work fine on my Cobalt Qube2 and SGI O2, where I am 
  building stages.

  02 Jan 2009; <solar@gentoo.org> metadata.xml, uclibc-0.9.30.ebuild:
  work around gcc-4 lack of ssp by default support while +hardened is enabled

*uclibc-0.9.30 (28 Nov 2008)

  28 Nov 2008; <solar@gentoo.org> -uclibc-0.9.28.3-r6.ebuild,
  -uclibc-0.9.30_rc1.ebuild, -uclibc-0.9.30_rc3.ebuild,
  +uclibc-0.9.30.ebuild:
  - version bump and some cleanup

  09 Nov 2008; <solar@gentoo.org> uclibc-0.9.30_rc3.ebuild:
  - psm reports headers need -j1 flag

  01 Nov 2008; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.27-r1.ebuild,
  uclibc-0.9.28.3.ebuild, uclibc-0.9.28.3-r3.ebuild,
  uclibc-0.9.28.3-r6.ebuild, uclibc-0.9.28.3-r7.ebuild,
  uclibc-0.9.30_rc1.ebuild, uclibc-0.9.30_rc3.ebuild:
  Unify some ebuild differences and fix header-only install with newer
  versions #234748 by Nathan Brink.

*uclibc-0.9.30_rc3 (29 Oct 2008)

  29 Oct 2008; <solar@gentoo.org> +uclibc-0.9.30_rc3.ebuild: