@@ -13,19 +13,19 @@ DIST uClibc-0.9.30.1-patches-1.0.tar.bz2 5501 RMD160 d2c48023fb25af45512c65ce3c5
 DIST uClibc-0.9.30.1.tar.bz2 2285137 RMD160 bff9a232b1f1c73efd71247e7b91aa31d41af0ee SHA1 4b36fec9a0dacbd6fe0fd2cdb7836aaf8b7f4992 SHA256 2d9769a02c46cff73f56a076268192da1ce91c913e2e4e31c120be098f704c8c
 DIST uClibc-0.9.30.tar.bz2 2291882 RMD160 08270ef742a2167ae660c5440bc5f78775a10ab0 SHA1 e96665237968fb2e4aa027bde9d56c4fe599eb1b SHA256 67e7e6b983cd2caa163f177d5196282434ae1e18b7270495cd6c65f5c1549555
 DIST uClibc-locale-030818.tgz 236073 RMD160 8e3f4b20b94e07e535cbbbe81287186014c5f151 SHA1 78f901e6ed228ed84106bd034c1b97eee1eecb50 SHA256 c4362be318a38f18d98dccf462d22d95bab92f05548bb93f65298fe9afaebd57
-EBUILD uclibc-0.9.27-r1.ebuild 12348 RMD160 794e5b53f970e7e283cfe97d3077063fe992f140 SHA1 90540836e9e340f99305bcef0f012754f6486239 SHA256 afc3015a484a2335eaaf7da0111d6dd6b3c53a4f85b2e09561ce06685f4c134c
-EBUILD uclibc-0.9.28.3-r3.ebuild 14518 RMD160 f321b71832206149df14818eb09811ec25856c77 SHA1 e19c8024fb57df2789bbebf31cb006d75492b4a2 SHA256 c849a7c1f522b8573534f51083c0e6520a28c6b409c8edec85b498ae4579b6e9
-EBUILD uclibc-0.9.28.3-r7.ebuild 14521 RMD160 581c72c2ac1c2527a26540178e7c40d468966a7c SHA1 7d9c7c8cd57afc39bcf17d5c6abe8a31157ff0de SHA256 e747dba48a1b9708c3c6ea0b933b78929a5d3e819d660dd75374ce4ad58de62b
-EBUILD uclibc-0.9.28.3.ebuild 14513 RMD160 bca7feae315df5b02c83800a1fa4db69c73d2d0c SHA1 c6e4cd20006305d85a0b204974d51b32730beb45 SHA256 05331a85ed5c828c85c05424fbc20693d81375eec3c11713d6f9e35fdc3598e1
-EBUILD uclibc-0.9.30.1-r1.ebuild 11489 RMD160 06d77408617a104a7adf8f670df7bcdc372b7698 SHA1 b5c480aed66e84aa38ba55cdc496ba3711334f99 SHA256 2648c1b742a5c82422f1d0135b0385e0584a00d30a6946e5bfd4580a504badb5
-EBUILD uclibc-0.9.30.1.ebuild 11487 RMD160 13b7e1c1e186ade149cb7dabb04e3d4bafd4788c SHA1 628df1a32c04da53ef42f7f90e54e8f3b6c183cf SHA256 e50d6f36d6df39a59ca6c39f87f3c57999c35949af7b0033cd245fb07e5b669c
-EBUILD uclibc-0.9.30.ebuild 13897 RMD160 7da8ee94dd96a05c9c2147025d2e68b51457afca SHA1 a9463ac7fe35d5c342595601bdc2424c93b5e8c0 SHA256 8b21456bd1e18f37559ed8cd9bb30c3e268581dfea30700fb25f58bd9b050d77
-MISC ChangeLog 15856 RMD160 624048965fbaa49058288f94983619a50e604c30 SHA1 2cb2b03535592d3a7fa2207749747dd72e4cdf62 SHA256 67bd8cc3f1131c2d8c97312c5489e30de295a8627d2ee62f41943bff2d61c4a1
+EBUILD uclibc-0.9.27-r1.ebuild 12380 RMD160 36734dc595912b5c098ce45a16ff125b9975b2e6 SHA1 b5e9db6fbccc6e1745e1c24295543869137589bc SHA256 9506490abe63ca799b0c7bef12b3328ff5d22b98e6971dc86dcde8bf4c18a49b
+EBUILD uclibc-0.9.28.3-r3.ebuild 14550 RMD160 5c3f82557078d92a444fa974308cf93c453f4a55 SHA1 798c60c811f4e090fbdb0978997c9379d5abcb40 SHA256 961a57aa7983ec18895b4898cb27d5c45215abd1183a0f162cde942918d097c9
+EBUILD uclibc-0.9.28.3-r7.ebuild 14553 RMD160 022d278ebde41f7c2240d6f3520d91d37c72e0d1 SHA1 2c7a6686d5ff570c22d407f18f4bacae0bbfbd04 SHA256 0890e0b5ec455ea0a2ad8285a4f363348eddeae1ef2dc9a1ebff6428e136eb21
+EBUILD uclibc-0.9.28.3.ebuild 14545 RMD160 23a1f587e1f3a826d460e18040b62701da9502af SHA1 4a0d29633efb9ec0ac4c839ecf85158f62f854a5 SHA256 7ed1eebb06aa1cd4641e00a9967412c9493fb01e2af59d139e24d457f4e8a820
+EBUILD uclibc-0.9.30.1-r1.ebuild 11508 RMD160 874a5031bb4867456255348cfdbe657ea0053fae SHA1 4fda0f6bd0d09963e383464810e096927c4b2e4a SHA256 5e2480949d32dce2266915e31da50a7f44979eba53c20eec26df6414576b3c18
+EBUILD uclibc-0.9.30.1.ebuild 11506 RMD160 c6e1af3475eb53fc012fdde1fd6d2dd10a786038 SHA1 2d82920ea5710e0c9c3e92b073078e100bc0b18e SHA256 241040a4143f4bf7a2c15e1e9f5f6daca361b9d364382e163a931784a36f3c06
+EBUILD uclibc-0.9.30.ebuild 13913 RMD160 ed6dabcc3aaf4c4c892440594abf0d4ee0f8201a SHA1 fe2c0d839bb3ff7972226dd3d5dd4353c3fc72f2 SHA256 f19a96e57e851926977440c0baca2feb19513c14136b3d2fa57e2579cd378e76
+MISC ChangeLog 16149 RMD160 235ef0b149c4cc75f99eb2b5da105dc22937bca4 SHA1 c55573cffedc313d9487b4e013313eb50a79e423 SHA256 228833c3dfcc2712471d0f432c6b1e2c9f7444c30c8fc7f62a48346798889272
 MISC metadata.xml 1469 RMD160 0c3640cb24a93c003e59cd0f9fd99587881ac63e SHA1 6be5e573878f88438a0121ff49841d52f07dedcd SHA256 e2f9e4727e826e87f735157c170a4e1f5f3ff572a2a2875f6a8889dfa5c648a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.12 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpj+ckACgkQlPl3HsVfCDraAwCfRXlwgG0Rtd6WDGiIgUObIVIx
-jXEAn19awpO9/VHPsadV+u9s9e/947in
-=OvEm
+iEYEARECAAYFAkpm1ekACgkQ/ejvha5XGaOwOQCfY8A2vuNyGsBsGWuxXQxZ+/a2
+YDAAoKP5BCKrmtB4eGbhkMUlizEOTTsr
+=o4rl
 -----END PGP SIGNATURE-----
