@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/uclibc/uclibc-0.9.30.ebuild,v 1.3 2009/01/10 04:32:59 redhatter Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/uclibc/uclibc-0.9.30.ebuild,v 1.4 2009/07/22 09:03:36 zmedico Exp $
 
 #ESVN_REPO_URI="svn://uclibc.org/trunk/uClibc"
 #inherit subversion
@@ -35,17 +35,16 @@ SRC_URI="http://uclibc.org/downloads/${MY_P}.tar.bz2
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="-* ~amd64 ~arm ~m68k ~mips ~ppc ~sh ~sparc ~x86"
-IUSE="build uclibc-compat debug hardened ssp iconv ipv6 minimal nls pregen userlocales wordexp crosscompile_opts_headers-only"
+IUSE="build elibc_uclibc uclibc-compat debug hardened ssp iconv ipv6 minimal nls pregen userlocales wordexp crosscompile_opts_headers-only"
 RESTRICT="strip"
 
 RDEPEND=""
+PROVIDE="elibc_uclibc? ( virtual/libc )"
 if [[ -n $CTARGET && ${CTARGET} != ${CHOST} ]]; then
 	DEPEND=""
-	PROVIDE=""
 	SLOT="${CTARGET}"
 else
 	DEPEND="virtual/os-headers app-misc/pax-utils"
-	PROVIDE="virtual/libc"
 	SLOT="0"
 fi
 
